# id-system

./: .env.example  .gitignore  Cargo.toml  README.md  structure.json
data/: departments.json  roles.json
migrations/2024-01-29-194414_create_employees/: up.sql
src/: commands.rs  console.rs  database.rs  employee.rs  files.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs
src/commands/: delete_command.rs  exit_command.rs  generate_command.rs  help_command.rs  list_command.rs  reload_command.rs  save_command.rs  verify_command.rs
