[package]
name = "id-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
rand = "0.8.5"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
